--- a/Front/projeto_palpedia/src/Components/Navbar/supergraphic.module.css
+++ b/Front/projeto_palpedia/src/Components/Navbar/supergraphic.module.css
@@ -1,5 +1,6 @@
 .logo {
     background-image: url('./img/logo\ Updated.png');
+    /* background-image: url('./img/list-view-mobile.svg'); */
     height: 5rem;
     position: relative;
     transform: scale(1.02);
