--- a/Front/projeto_palpedia/src/Pages/AboutPage/styles.module.scss
+++ b/Front/projeto_palpedia/src/Pages/AboutPage/styles.module.scss
@@ -6,6 +6,7 @@
 
 .row {
     padding-inline: 1em;
+    margin-block: 0.5em;
 }
 
 .textCard {
@@ -34,4 +35,9 @@
     height: auto;
     mask-image: linear-gradient(to right, rgba(0, 0, 0, 1.0) 40%, transparent 100%);
     border-radius: 5px;
+}
+
+.cardFooter {
+    padding-inline: 0.5em;
+    margin-inline: 0.5em;
 }
